# 3DVehicleDynamicsStateEstimation

dependencies/msgs/: CMakeLists.txt  package.xml
dependencies/msgs/msg/: SteeringReport.msg  TUMFloat64PerWheelStamped.msg
dependencies/param_manager_cpp/: CMakeLists.txt
dependencies/ros1_watchdog_cpp/: CMakeLists.txt  package.xml
dependencies/ros1_watchdog_cpp/include/ros1_watchdog_cpp/: topic_watchdog.hpp
dependencies/ros1_watchdog_cpp/src/: topic_watchdog.cpp
dependencies/ros_debug_helpers_cpp/: CMakeLists.txt  package.xml
dependencies/ros_debug_helpers_cpp/include/ros_debug_helpers_cpp/: debug_publisher.hpp
dependencies/ros_debug_helpers_cpp/src/: debug_publisher.cpp
dependencies/ros_param_helpers_cpp/include/ros_param_helpers_cpp/: helper_functions.hpp
dependencies/ros_param_helpers_cpp/src/: helper_functions.cpp
dependencies/tum_helpers_cpp/: CMakeLists.txt  package.xml
dependencies/tum_helpers_cpp/include/tum_helpers_cpp/: containers.hpp
dependencies/tum_type_conversions_ros_cpp/: CMakeLists.txt  package.xml
dependencies/tum_type_conversions_ros_cpp/include/tum_type_conversions_ros_cpp/: orientation.hpp  tum_type_conversions.hpp
dependencies/tum_type_conversions_ros_cpp/src/: orientation.cpp  tum_type_conversions.cpp
dependencies/tum_type_conversions_ros_cpp/test/: orientation_tests.cpp
dependencies/tum_types_cpp/: CMakeLists.txt  package.xml
dependencies/tum_types_cpp/include/tum_types_cpp/: control.hpp  data_per_wheel.hpp
lib_cpp/base/classical_filter/: CMakeLists.txt  package.xml
lib_cpp/base/imu_handler/: CMakeLists.txt  package.xml
lib_cpp/base/imu_handler/include/imu_handler/: imu_handler.hpp  imu_handler_impl.hpp
lib_cpp/base/ssa_estimation_base/: CMakeLists.txt  package.xml
lib_cpp/base/ssa_estimation_base/include/ssa_estimation_base/: ssa_estimation_base.hpp
lib_cpp/base/state_estimation_base/: CMakeLists.txt  package.xml
lib_cpp/base/state_estimation_base/include/state_estimation_base/: state_estimation_base.hpp
lib_cpp/constants/ssa_estimation_constants/: CMakeLists.txt  package.xml
lib_cpp/constants/state_estimation_constants/: CMakeLists.txt  package.xml
lib_cpp/ssa_estimation_cpp/: CMakeLists.txt  package.xml
lib_cpp/ssa_estimation_cpp/include/ssa_estimation_cpp/: ssa_estimation.hpp  ssa_estimation_impl.hpp
lib_cpp/ssa_estimation_cpp/include/ssa_estimation_cpp/submodules/: state_machine.hpp  state_machine_impl.hpp  ukf.hpp  ukf_impl.hpp
lib_cpp/state_estimation_cpp/: CMakeLists.txt  package.xml
lib_cpp/state_estimation_cpp/include/state_estimation_cpp/: state_estimation.hpp  state_estimation_impl.hpp
lib_cpp/state_estimation_cpp/include/state_estimation_cpp/filter/helper/: outlier_detection.hpp  outlier_detection_impl.hpp
lib_cpp/state_estimation_cpp/include/state_estimation_cpp/filter/kalman_filter/: ekf.hpp  ekf_impl.hpp  kalman_filter_base.hpp  kalman_filter_base_impl.hpp
lib_cpp/state_estimation_cpp/include/state_estimation_cpp/submodules/: ref_orientation_handler.hpp  ref_orientation_handler_impl.hpp  state_machine.hpp  state_machine_impl.hpp  vehicle_model_handler.hpp  vehicle_model_handler_impl.hpp
lib_cpp/state_estimation_cpp/test/: unit_test_state_machine.cpp
packages_cpp/rosbag_example/: CMakeLists.txt  package.xml
packages_cpp/rosbag_example/launch/: example.launch
packages_cpp/ssa_estimation_node_cpp/: CMakeLists.txt  package.xml
packages_cpp/ssa_estimation_node_cpp/config/: ssa_estimation_ukf_config.yml
packages_cpp/ssa_estimation_node_cpp/include/ssa_estimation_node_cpp/: ssa_estimation_node.hpp  ssa_estimation_node_impl.hpp
packages_cpp/ssa_estimation_node_cpp/src/: ssa_estimation_node_main.cpp
packages_cpp/state_estimation_node_cpp/: CMakeLists.txt  CMakeLists.txt.backup  package.xml
packages_cpp/state_estimation_node_cpp/config/: state_estimation_cpp_2d_ekf_config.yml  state_estimation_cpp_3d_ekf_config.yml
packages_cpp/state_estimation_node_cpp/include/state_estimation_node_cpp/: state_estimation_node.hpp  state_estimation_node_impl.hpp
packages_cpp/state_estimation_node_cpp/src/: CMakeLists.txt.backup
packages_cpp/state_estimation_node_cpp/src/cpp/kinematic/: state_estimation_node_cpp_ekf_2d_main.cpp  state_estimation_node_cpp_ekf_3d_main.cpp
packages_cpp/state_estimation_node_cpp/src/cpp/non_holonomic/: state_estimation_node_cpp_ekf_2d_main.cpp  state_estimation_node_cpp_ekf_3d_main.cpp
packages_cpp/state_estimation_node_cpp/src/cpp/single_track_model/: state_estimation_node_cpp_ekf_3d_main.cpp
packages_cpp/state_publisher/: CMakeLists.txt  package.xml
packages_cpp/state_publisher/launch/: state_publisher.launch
txt_vegas24_pub/: TUMFloat_rosbag.py  diag_data.txt  diag_rosbag.py  float_data.txt  float_rosbag.py  imu_rosbag.py  odom_rosbag.py  steering_data.txt  steering_rosbag.py
