<?xml version="1.0"?>
<package format="2">
 <name>ros1_watchdog_cpp</name>
 <version>0.0.0</version>
 <description>Topic Watchdog for ROS1 topics</description>
 <maintainer email="simon.hoffmann@tum.de">simon</maintainer>
 <license>LGPLv3</license>

 <buildtool_depend>catkin</buildtool_depend>

 <build_depend>roscpp</build_depend>
 <build_depend>diagnostic_msgs</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>msgs</build_depend>
 <build_depend>tum_helpers_cpp</build_depend>
 <build_depend>tum_types_cpp</build_depend>
 <build_depend>tum_type_conversions_ros_cpp</build_depend>

 <exec_depend>roscpp</exec_depend>
 <exec_depend>diagnostic_msgs</exec_depend>
 <exec_depend>std_msgs</exec_depend>
 <exec_depend>msgs</exec_depend>
 <exec_depend>tum_helpers_cpp</exec_depend>
 <exec_depend>tum_types_cpp</exec_depend>
 <exec_depend>tum_type_conversions_ros_cpp</exec_depend>
</package>