<?xml version="1.0"?>
<package format="2">
  <name>ros_debug_helpers_cpp</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="simon.sagmeister@tum.de">simon</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tum_types_cpp</depend>
  <depend>msgs</depend>
</package>