<?xml version="1.0"?>
<package format="2">
  <name>tum_helpers_cpp</name>
  <version>0.0.0</version>
  <description>custom helper functions</description>
  <maintainer email="simon.Hoffmann@tum.de">Simon Hoffmann</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>tum_types_cpp</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>

  <test_depend>gtest</test_depend>
  <test_depend>catkin-locate-files</test_depend>
  <test_depend>clang-format</test_depend>
  <test_depend>cpplint</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
