<?xml version="1.0"?>
<package format="2">
  <name>tum_type_conversions_ros_cpp</name>
  <version>0.0.0</version>
  <description>custom type conversions</description>
  <maintainer email="phillip.pitschi@tum.de">phillip</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>tf</depend>
  <depend>nav_msgs</depend>
  <depend>tum_types_cpp</depend>
  <depend>tum_helpers_cpp</depend>
  <depend>geometry_msgs</depend>
  <depend>msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>

  <test_depend>gtest</test_depend>
  <test_depend>catkin-locate-files</test_depend>
  <test_depend>clang-format</test_depend>
  <test_depend>cpplint</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
