<?xml version="1.0"?>
<package format="2">
  <name>tum_types_cpp</name>
  <version>0.0.0</version>
  <description>custom type definitions</description>
  <maintainer email="simon.sagmeister@tum.de">simon</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <test_depend>gtest</test_depend>
  <test_depend>rostest</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
