<?xml version="1.0"?>
<package format="2">
 <name>ssa_estimation_cpp</name>
 <version>0.0.1</version>
 <description>ssa estimation cpp class</description>
 <maintainer email="sven.goblirsch@tum.de">Sven Goblirsch</maintainer>
 <license>LGPLv3</license>

 <buildtool_depend>catkin</buildtool_depend>

 <depend>roscpp</depend>
 
 <build_depend>tum_types_cpp</build_depend>
 <build_depend>tum_helpers_cpp</build_depend>
 <build_depend>tum_type_conversions_ros_cpp</build_depend>
 <build_depend>ssa_estimation_constants</build_depend>
 <build_depend>ssa_estimation_base</build_depend>
 <build_depend>imu_handler</build_depend>
 <build_depend>classical_filter</build_depend>

 <exec_depend>tum_types_cpp</exec_depend>
 <exec_depend>tum_helpers_cpp</exec_depend>
 <exec_depend>tum_type_conversions_ros_cpp</exec_depend>
 <exec_depend>ssa_estimation_constants</exec_depend>
 <exec_depend>ssa_estimation_base</exec_depend>
 <exec_depend>imu_handler</exec_depend>
 <exec_depend>classical_filter</exec_depend>
</package>