<?xml version="1.0"?>
<package format="2">
  <name>ssa_estimation_node_cpp</name>
  <version>0.0.0</version>
  <description>C++ Node for the side slip angle estimation</description>
  <maintainer email="sven.goblirsch@tum.de">Sven Goblirsch</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>ros_debug_helpers_cpp</depend>
  <depend>tum_types_cpp</depend>
  <depend>tum_helpers_cpp</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>ssa_estimation_cpp</depend>
  <depend>ssa_estimation_constants</depend>
  <depend>msgs</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>tum_type_conversions_ros_cpp</depend>
  <depend>ros1_watchdog_cpp</depend>
</package>