<?xml version="1.0"?>
<package format="2">
  <name>state_publisher</name>
  <version>0.0.0</version>
  <description>state publisher</description>
  <maintainer email="sven.goblirsch@tum.de">Sven Goblirsch</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

  <export>
  </export>
</package>
