<?xml version="1.0"?>
<package format="2">
  <name>classical_filter</name>
  <version>0.0.1</version>
  <description>classical_filter</description>
  <maintainer email="sven.goblirsch@tum.de">Sven Goblirsch</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <test_depend>gtest</test_depend>
  <test_depend>catkin</test_depend>
  <test_depend>clang-format</test_depend>
  <test_depend>cpplint</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
