<?xml version="1.0"?>
<package format="2">
  <name>imu_handler</name>
  <version>0.0.1</version>
  <description>imu_handler</description>
  <maintainer email="sven.goblirsch@tum.de">Sven Goblirsch</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>

  <build_depend>tum_types_cpp</build_depend>
  <build_depend>tum_helpers_cpp</build_depend>
  <build_depend>ssa_estimation_constants</build_depend>
  <build_depend>state_estimation_constants</build_depend>
  <build_depend>classical_filter</build_depend>

  <exec_depend>tum_types_cpp</exec_depend>
  <exec_depend>tum_helpers_cpp</exec_depend>
  <exec_depend>ssa_estimation_constants</exec_depend>
  <exec_depend>state_estimation_constants</exec_depend>
  <exec_depend>classical_filter</exec_depend>

  <test_depend>gtest</test_depend>
  <test_depend>catkin</test_depend>
  <test_depend>clang-format</test_depend>
  <test_depend>cpplint</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
