<?xml version="1.0"?>
<package format="2">
  <name>ssa_estimation_base</name>
  <version>0.0.1</version>
  <description>side slip angle estimation cpp base class</description>
  <maintainer email="sven.goblirsch@tum.de">Sven Goblirsch</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>tum_types_cpp</depend>
  <depend>roscpp</depend>
  
  <test_depend>gtest</test_depend>
  <test_depend>catkin-locate-files</test_depend>
  <test_depend>clang-format</test_depend>
  <test_depend>cpplint</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>
