<?xml version="1.0"?>
<package format="2">
  <name>state_estimation_base</name>
  <version>0.0.1</version>
  <description>State estimation cpp base class</description>
  <maintainer email="marcel.weinmann@tum.de">Marcel Weinmann</maintainer>
  <license>LGPLv3</license>

  <!-- Build tool dependency for ROS1 -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>tum_types_cpp</depend>
  <depend>roscpp</depend>

  <!-- Testing dependencies for ROS1 -->
  <build_depend>catkin_simple</build_depend>
  <build_depend>gtest</build_depend>
  <test_depend>catkin</test_depend>
  <test_depend>gtest</test_depend>
  
  <!-- Export the dependencies and build type -->
  <export>
    <build_type>catkin</build_type>
  </export>
</package>
