<?xml version="1.0"?>
<package format="2">
  <name>ssa_estimation_constants</name>
  <version>0.0.1</version>
  <description>ssa estimation cpp classes</description>
  <maintainer email="sven.goblirsch@tum.de">Sven Goblirsch</maintainer>
  <license>LGPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>catkin_simple</build_depend>
  <build_depend>gtest</build_depend>
  <test_depend>catkin</test_depend>
  <test_depend>gtest</test_depend>

  <export>
    <build_type>catkin</build_type>
  </export>
</package>